# PredictX

./: .gitignore  FileStructure.md  README.md  create_project.py  gitignore  package.json  structure.md  test.py
backend/: .env  pyproject.toml  requirements.txt
backend/app/: .env  agent_service.py  ai_engine.py  main.py  models.py  prediction_service.py  test_agent.py
backend/app/models/: prediction.py
backend/app/services/: agent_service.py  prediction_service.py
docker/: docker-compose.yml
frontend/: .env  package-lock.json  package.json
frontend/src/: App.tsx  index.tsx  types.ts
frontend/src/components/: PredictionCard.tsx  PredictionList.tsx  WalletConnect.tsx
frontend/src/services/: api.ts
prediction-platform/backend/app/: price_service.py  utils.py
prediction-platform/frontend/: package-lock.json
prediction-platform/frontend/public/: index.html
prediction-platform/frontend/src/: App.tsx
prediction-platform/frontend/src/components/: PredictionCard.tsx  WalletConnect.tsx
