[project]
name = "backend"
version = "0.1.0"
description = "Crypto prediction platform using Coinbase AgentKit"
authors = [
    {name = "InvitedTea"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "fastapi (>=0.115.8,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "cdp-agentkit-core (>=0.0.11,<0.0.12)",
    "cdp-langchain (>=0.0.13,<0.0.14)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "sqlalchemy (>=2.0.38,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
